force-app/main/default/objects/malive__MALive_SummaryEvent__c/malive__MALive_SummaryEvent__c.object-meta.xml
<CustomObject>
    <label>MA Live Asset Daily Summary Event</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>MA Live Summary Event Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MA Live Asset Daily Summary Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>