force-app/main/default/objects/malive__MALive_SummaryEvent__c/fields/malive__AverageSpeed_mph__c.field-meta.xml
<CustomField>
    <fullName>malive__AverageSpeed_mph__c</fullName>
    <inlineHelpText>Average speed over the course of the event, in miles per hour</inlineHelpText>
    <label>Average Speed (mph)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>