force-app/main/default/objects/malive__MALive_SummaryEvent__c/fields/malive__City__c.field-meta.xml
<CustomField>
    <fullName>malive__City__c</fullName>
    <description>MapAnything Live City address field</description>
    <inlineHelpText>City of event location (when available)</inlineHelpText>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>