force-app/main/default/objects/malive__MALive_SummaryEvent__c/fields/malive__Country__c.field-meta.xml
<CustomField>
    <fullName>malive__Country__c</fullName>
    <description>MapAnything Live Country address field</description>
    <inlineHelpText>Country of event location (when available)</inlineHelpText>
    <label>Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>