force-app/main/default/objects/malive__MALive_SummaryEvent__c/fields/malive__EndUnixTimeStamp__c.field-meta.xml
<CustomField>
    <fullName>malive__EndUnixTimeStamp__c</fullName>
    <label>End Unix Time Stamp</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>