force-app/main/default/objects/malive__MALive_SummaryEvent__c/fields/malive__EventEnded__c.field-meta.xml
<CustomField>
    <fullName>malive__EventEnded__c</fullName>
    <inlineHelpText>Timestamp of event end</inlineHelpText>
    <label>Event Ended</label>
    <type>DateTime</type>
</CustomField>