force-app/main/default/objects/malive__MALive_SummaryEvent__c/fields/malive__EventOccuredAMorPM__c.field-meta.xml
<CustomField>
    <fullName>malive__EventOccuredAMorPM__c</fullName>
    <description>AM/PM is determined based on the Timezone of the device.</description>
    <inlineHelpText>AM/PM is determined based on the Timezone of the device.</inlineHelpText>
    <label>Event Occurred in AM or PM</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AM</fullName>
            </value>
            <value>
                <fullName>PM</fullName>
            </value>
            <value>
                <fullName>AM/PM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>