force-app/main/default/objects/malive__MALive_SummaryEvent__c/fields/malive__Full_Address__c.field-meta.xml
<CustomField>
    <fullName>malive__Full_Address__c</fullName>
    <inlineHelpText>This is the full address of where the event occurred</inlineHelpText>
    <label>Full Address</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>