force-app/main/default/objects/malive__MALive_SummaryEvent__c/fields/malive__MALiveDailySummary__c.field-meta.xml
<CustomField>
    <fullName>malive__MALiveDailySummary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>MA Live Daily Summary record to which this event relates</description>
    <inlineHelpText>MA Live Daily Summary record to which this event relates</inlineHelpText>
    <label>MA Live Daily Summary</label>
    <referenceTo>malive__IoTDeviceDailySummary__c</referenceTo>
    <relationshipLabel>MA Live Asset Daily Summary Events</relationshipLabel>
    <relationshipName>MALiveSummaryEvents</relationshipName>
    <type>Lookup</type>
</CustomField>