force-app/main/default/objects/malive__MALive_SummaryEvent__c/fields/malive__Number_of_Associations__c.field-meta.xml
<CustomField>
    <fullName>malive__Number_of_Associations__c</fullName>
    <label>Number of Associations</label>
    <summaryForeignKey>malive__MALiveEventAssociation__c.malive__MALive_SummaryEvent__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>