force-app/main/default/objects/malive__MALive_SummaryEvent__c/fields/malive__OdometerKm__c.field-meta.xml
<CustomField>
    <fullName>malive__OdometerKm__c</fullName>
    <inlineHelpText>Odometer value (km) captured at the time of event</inlineHelpText>
    <label>Odometer (km)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>