force-app/main/default/objects/malive__MALive_SummaryEvent__c/fields/malive__OdometerMiles__c.field-meta.xml
<CustomField>
    <fullName>malive__OdometerMiles__c</fullName>
    <inlineHelpText>Odometer value (mi) captured at the time of event</inlineHelpText>
    <label>Odometer (mi)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>