force-app/main/default/objects/malive__MALive_SummaryEvent__c/fields/malive__Order__c.field-meta.xml
<CustomField>
    <fullName>malive__Order__c</fullName>
    <label>Stop Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>