force-app/main/default/objects/malive__MALive_SummaryEvent__c/fields/malive__Position__c.field-meta.xml
<CustomField>
    <fullName>malive__Position__c</fullName>
    <inlineHelpText>Asset location at start of event</inlineHelpText>
    <label>Position</label>
    <scale>7</scale>
    <type>Location</type>
</CustomField>