force-app/main/default/objects/malive__MALive_SummaryEvent__c/fields/malive__PostedSpeedLimit__c.field-meta.xml
<CustomField>
    <fullName>malive__PostedSpeedLimit__c</fullName>
    <inlineHelpText>Posted speed limit where event occurs, when available, in kilometers per hour</inlineHelpText>
    <label>Posted Speed Limit (kph)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>