force-app/main/default/objects/malive__MALive_SummaryEvent__c/fields/malive__PostedSpeedLimit_MPH__c.field-meta.xml
<CustomField>
    <fullName>malive__PostedSpeedLimit_MPH__c</fullName>
    <description>This is the posted speed limit of where the event took place.</description>
    <inlineHelpText>Posted speed limit where event occurs, when available, in miles per hour</inlineHelpText>
    <label>Posted Speed Limit (mph)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>