force-app/main/default/objects/malive__MALive_SummaryEvent__c/fields/malive__State__c.field-meta.xml
<CustomField>
    <fullName>malive__State__c</fullName>
    <description>MapAnything Live State address field</description>
    <inlineHelpText>State of event location (when available)</inlineHelpText>
    <label>State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>