force-app/main/default/objects/malive__MALive_SummaryEvent__c/fields/malive__TotalEventTimeMinutes__c.field-meta.xml
<CustomField>
    <fullName>malive__TotalEventTimeMinutes__c</fullName>
    <inlineHelpText>Duration of a stop event in minutes. (only available for Stop events)</inlineHelpText>
    <label>Event Duration (Minutes)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>