force-app/main/default/objects/malive__MALive_SummaryEvent__c/listViews/malive__All.listView-meta.xml
<ListView>
    <fullName>malive__All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>malive__EventType__c</columns>
    <columns>malive__MALiveDailySummary__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>